---
source: crates/tapir-script/compiler/src/compile/optimisations/dead_code_elimination_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/dead_code/declaration_unused_but_variable_used_later.tapir
---
# @toplevel: {"FunctionId(0)"}

# {"SymbolId(3)"}
var y = (
        foo(
                int_prop # {"SymbolId(0)"}
                ,) # {"FunctionId(1)"}
         * 2);
wait;
# {"SymbolId(3)"}
y = 
        foo(
                int_prop # {"SymbolId(0)"}
                ,) # {"FunctionId(1)"}
        ;
# {"SymbolId(0)"}
int_prop = 
        y # {"SymbolId(3)"}
        ;

# {"FunctionId(1)"}
fn foo(int,) -> (int,) {
    wait;
    return (
            x # {"SymbolId(4)"}
            ,);
}
